--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/luxon": "^3.2.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "axios": "^1.2.2",
+    "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
@@ -28,8 +31,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^3.1.1",
-    "@types/uuid": "^9.0.0"
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
