--- a/client/package.json
+++ b/client/package.json
@@ -1,63 +1,62 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
-    "@mui/styles": "^5.11.2",
-    "@mui/x-data-grid": "^5.17.19",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/luxon": "^3.2.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/uuid": "^9.0.0",
-    "axios": "^1.2.2",
-    "luxon": "^3.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
-    "react-redux": "^8.0.4",
-    "react-router": "^6.6.2",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^3.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/uuid": "^9.0.0"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.11.4",
+        "@mui/styles": "^5.11.2",
+        "@mui/x-data-grid": "^5.17.19",
+        "@reduxjs/toolkit": "^1.8.5",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.2.2",
+        "luxon": "^3.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-draggable": "^4.4.5",
+        "react-redux": "^8.0.4",
+        "react-router": "^6.6.2",
+        "react-router-dom": "^6.6.2",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1",
+        "typescript": "^4.9.4",
+        "web-vitals": "^3.1.1"
+    },
+    "scripts": {
+        "start": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "serve": "vite serve"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/jest": "^27.5.2",
+        "@types/luxon": "^3.2.0",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10",
+        "@vitejs/plugin-react": "^3.1.0",
+        "vite": "^4.1.1"
+    }
 }
