--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,9 @@
     "@types/ipp": "^2.0.2",
     "@types/luxon": "^3.0.1",
     "@types/node": "^18.8.3",
+    "@types/node-cron": "^3.0.7",
+    "@types/node-schedule": "^2.1.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/qrcode": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -25,6 +28,9 @@
     "jimp": "^0.16.2",
     "ksuid": "^3.0.0",
     "luxon": "^3.2.1",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "prisma": "^4.4.0",
