--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/chart.js": "^2.9.37",
         "axios": "^1.2.2",
+        "chart.js": "^4.2.1",
         "luxon": "^3.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
