--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@prisma/client": "^4.4.0",
+        "@prisma/client": "^4.12.0",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/ipp": "^2.0.2",
@@ -34,7 +34,6 @@
         "nodemailer": "^6.9.1",
         "nodemon": "^2.0.20",
         "path": "^0.12.7",
-        "prisma": "^4.4.0",
         "qrcode": "^1.5.1",
         "sharp": "0.31.1",
         "ts-node": "^10.9.1"
@@ -46,6 +45,7 @@
         "@types/luxon": "^3.0.1",
         "@types/node": "^18.8.3",
         "@types/qrcode": "^1.5.0",
-        "@types/sharp": "0.31.1"
+        "@types/sharp": "0.31.1",
+        "prisma": "^4.12.0"
     }
 }
